--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,10 +1,6 @@
 .navbar {
   min-height: 6rem;
-  font-size: 2rem;
-}
-
-.nav-item {
-  padding: 1rem;
+  font-size: 1.5rem;
 }
 
 .navbar-brand {
@@ -12,13 +8,201 @@
 }
 
 #nav-searchInput {
+  margin-right: 0rem;
   height: 4rem;
-  width: 18vw;
+  width: 12rem;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 #nav-searchButton {
   font-size: 1.3rem;
-  width: 8vw;
+  width: 6rem;
   height: 4rem;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.dropdown-menu {
+  font-size: 1.5rem;
+}
+
+.dropdown-menu *:hover {
+  width: 99%;
+}
+
+.scard {
+  margin: 1rem;
+  padding: 1rem;
+  border: 1px solid #cccbcb;
+  border-radius: 0.2rem;
+  -webkit-box-shadow: 0.1rem 0.1rem 0.1rem #cccbcb;
+          box-shadow: 0.1rem 0.1rem 0.1rem #cccbcb;
+}
+
+.scard__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.scard__top-stock {
+  -webkit-box-flex: 0.7;
+      -ms-flex: 0.7;
+          flex: 0.7;
+}
+
+.scard__top-name {
+  font-size: 1.5rem;
+}
+
+.scard__top-symbol {
+  color: silver;
+  font-size: 0.8rem;
+}
+
+.scard__top-imgwrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.scard__top-img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0.3;
+      -ms-flex: 0.3;
+          flex: 0.3;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.scard__top-img img {
+  width: 3rem;
+  height: 2rem;
+}
+
+.scard__priceCurrent {
+  font-size: 0.9rem;
+  margin-bottom: 0.5rem;
+}
+
+.scard__52Wk {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-size: 0.8rem;
+}
+
+.scard__52Wk p {
+  margin-bottom: 0;
+}
+
+.scard__52Wk-barwrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.scard__52Wk-bar1 {
+  -webkit-box-flex: 0.5;
+      -ms-flex: 0.5;
+          flex: 0.5;
+  border: 1px solid silver;
+  border-right-style: none;
+}
+
+.scard__52Wk-bar2 {
+  -webkit-box-flex: 0.5;
+      -ms-flex: 0.5;
+          flex: 0.5;
+  border: 1px solid silver;
+  border-left-style: none;
+}
+
+.scard__marketOpen {
+  text-align: right;
+}
+
+.scard__graph {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 3rem;
+}
+
+.scard__buttonWrap {
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  text-align: center;
+}
+
+.scard__buybtn {
+  width: 100%;
+  height: 1.5rem;
+  border-style: none;
+  color: white;
+  background-color: green;
+  -webkit-box-flex: 0.5;
+      -ms-flex: 0.5;
+          flex: 0.5;
+}
+
+.scard__sellbtn {
+  width: 100%;
+  height: 1.5rem;
+  border-style: none;
+  color: white;
+  background-color: red;
+  -webkit-box-flex: 0.5;
+      -ms-flex: 0.5;
+          flex: 0.5;
+}
+
+.card {
+  margin: 1rem auto;
+  -webkit-box-shadow: 0.1rem 0.1rem 0.1rem #cccbcb;
+          box-shadow: 0.1rem 0.1rem 0.1rem #cccbcb;
+}
+
+.card-text {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 5;
+  overflow: hidden;
+}
+
+.login {
+  padding: 1rem;
+}
+
+.login__username {
+  border: 1px solid silver;
+  margin-bottom: 0.2rem;
+}
+
+.login__password {
+  border: 1px solid silver;
 }
 /*# sourceMappingURL=index.css.map */
