--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -44,6 +44,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -80,6 +82,9 @@
   -webkit-box-flex: 0.3;
       -ms-flex: 0.3;
           flex: 0.3;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
@@ -99,6 +104,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -180,10 +187,32 @@
           flex: 0.5;
 }
 
+.news {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .card {
-  margin: 1rem auto;
+  margin: 1rem 1rem;
   -webkit-box-shadow: 0.1rem 0.1rem 0.1rem #cccbcb;
           box-shadow: 0.1rem 0.1rem 0.1rem #cccbcb;
+}
+
+.card-img-top {
+  height: 10rem;
+}
+
+.card-title {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
 }
 
 .card-text {
