--- a/client/src/styles/_partials/_stockCard.scss
+++ b/client/src/styles/_partials/_stockCard.scss
@@ -13,6 +13,7 @@
   box-shadow: 0.1rem 0.1rem 0.1rem #cccbcb;
   &__top {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     &-stock {
       flex: 0.7;
@@ -31,6 +32,7 @@
     &-img {
       display: flex;
       flex: 0.3;
+      justify-content: flex-end;
       align-items: flex-start;
       img {
         width: 3rem;
@@ -44,6 +46,7 @@
   }
   &__52Wk {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     font-size: 0.8rem;
     p {
