--- a/client/src/styles/_partials/_newsCard.scss
+++ b/client/src/styles/_partials/_newsCard.scss
@@ -4,7 +4,7 @@
   justify-content: center;
 }
 .card {
-  margin: 1rem 1rem;
+  margin: 1rem 0;
   box-shadow: 0.1rem 0.1rem 0.1rem #cccbcb;
 }
 .card-img-top {
