--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,4 +1,6 @@
+@import "./_partials/breakpoints";
 @import "./_partials/header.scss";
+@import "./_partials/account";
 @import "./_partials/stockCard";
 @import "./_partials/newsCard";
 @import "./_partials/login";
