--- a/client/src/styles/_partials/_stockCard.scss
+++ b/client/src/styles/_partials/_stockCard.scss
@@ -1,6 +1,6 @@
 @mixin button {
   width: 100%;
-  height: 1.5rem;
+  height: 3rem;
   border-style: none;
   color: white;
 }
@@ -11,6 +11,7 @@
   border: 1px solid #cccbcb;
   border-radius: 0.2rem;
   box-shadow: 0.1rem 0.1rem 0.1rem #cccbcb;
+
   &__top {
     display: flex;
     flex-wrap: wrap;
@@ -40,9 +41,20 @@
       }
     }
   }
+  &__pricewrap {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 1.3rem;
+  }
   &__priceCurrent {
-    font-size: 0.9rem;
-    margin-bottom: 0.5rem;
+    span {
+      margin-left: 1rem;
+    }
+  }
+  &__highlow-title,
+  &__highlow-value {
+    display: flex;
+    justify-content: space-between;
   }
   &__52Wk {
     display: flex;
@@ -91,5 +103,12 @@
     @include button;
     background-color: red;
     flex: 0.5;
+  }
+}
+
+@include tablet {
+  .scard {
+    padding: 5rem;
+    margin: 5rem;
   }
 }
