--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,3 +1,5 @@
+/* media query for tablet */
+/* media query for high pixel density desktops */
 .navbar {
   min-height: 6rem;
   font-size: 1.5rem;
@@ -95,9 +97,27 @@
   height: 2rem;
 }
 
-.scard__priceCurrent {
-  font-size: 0.9rem;
-  margin-bottom: 0.5rem;
+.scard__pricewrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  font-size: 1.3rem;
+}
+
+.scard__priceCurrent span {
+  margin-left: 1rem;
+}
+
+.scard__highlow-title, .scard__highlow-value {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .scard__52Wk {
@@ -167,7 +187,7 @@
 
 .scard__buybtn {
   width: 100%;
-  height: 1.5rem;
+  height: 3rem;
   border-style: none;
   color: white;
   background-color: green;
@@ -178,13 +198,20 @@
 
 .scard__sellbtn {
   width: 100%;
-  height: 1.5rem;
+  height: 3rem;
   border-style: none;
   color: white;
   background-color: red;
   -webkit-box-flex: 0.5;
       -ms-flex: 0.5;
           flex: 0.5;
+}
+
+@media only screen and (min-width: 768px) {
+  .scard {
+    padding: 5rem;
+    margin: 5rem;
+  }
 }
 
 .news {
@@ -199,7 +226,7 @@
 }
 
 .card {
-  margin: 1rem 1rem;
+  margin: 1rem 0;
   -webkit-box-shadow: 0.1rem 0.1rem 0.1rem #cccbcb;
           box-shadow: 0.1rem 0.1rem 0.1rem #cccbcb;
 }
@@ -223,15 +250,55 @@
 }
 
 .login {
-  padding: 1rem;
+  padding: 2rem;
+  margin: 2rem;
+  background-color: #f3f3f3;
+  border-radius: 1rem;
+}
+
+.login__inputWrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .login__username {
+  width: 83%;
+  padding: 1rem;
+  height: 3rem;
   border: 1px solid silver;
-  margin-bottom: 0.2rem;
+  border-radius: 0.3rem;
+  margin-bottom: 1rem;
 }
 
 .login__password {
+  width: 83%;
+  padding: 1rem;
+  height: 3rem;
+  border-radius: 0.3rem;
   border: 1px solid silver;
+  margin-bottom: 1rem;
+}
+
+.login__btnWrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+@media only screen and (min-width: 768px) {
+  .login {
+    padding: 5rem;
+  }
 }
 /*# sourceMappingURL=index.css.map */
