--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,5 +1,5 @@
 @import "./_partials/breakpoints";
-@import "./_partials/header.scss";
+@import "./_partials/header";
 @import "./_partials/account";
 @import "./_partials/stockCard";
 @import "./_partials/newsCard";
