--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -3,6 +3,8 @@
 @import "./_partials/footer";
 @import "./_partials/landing";
 @import "./_partials/account";
+@import "./_partials/research";
 @import "./_partials/stockCard";
 @import "./_partials/newsCard";
+@import "./_partials/newOrder";
 @import "./_partials/login";
