--- a/client/src/styles/_partials/_stockCard.scss
+++ b/client/src/styles/_partials/_stockCard.scss
@@ -47,6 +47,11 @@
     justify-content: flex-end;
     font-size: 1.3rem;
   }
+  &__priceChange {
+    &-value {
+      font-size: 1rem;
+    }
+  }
   &__priceCurrent {
     span {
       margin-left: 1rem;
@@ -82,6 +87,7 @@
     }
   }
   &__marketOpen {
+    font-size: 1.3rem;
     text-align: right;
   }
   &__graph {
@@ -111,6 +117,11 @@
   .scard {
     padding: 5rem;
     margin: 2rem 8rem;
+    &__priceChange {
+      &-value {
+        font-size: 1.3rem;
+      }
+    }
   }
 }
 
