--- a/client/src/styles/_partials/_account.scss
+++ b/client/src/styles/_partials/_account.scss
@@ -45,6 +45,7 @@
     justify-content: space-between;
     padding-bottom: 1rem;
     border-bottom: 1px solid silver;
+    margin-bottom: 1rem;
     &-stock,
     &-price,
     &-quantity {
