--- a/client/src/styles/_partials/_stockCard.scss
+++ b/client/src/styles/_partials/_stockCard.scss
@@ -111,6 +111,17 @@
     background-color: red;
     flex: 0.5;
   }
+  &__chart {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 15rem;
+    canvas {
+      width: 90% !important;
+      max-width: 1000px;
+      max-height: 20rem;
+    }
+  }
 }
 
 @include tablet {
@@ -121,6 +132,9 @@
       &-value {
         font-size: 1.3rem;
       }
+    }
+    &__chart {
+      height: 20rem;
     }
   }
 }
