--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -202,6 +202,7 @@
           justify-content: space-between;
   padding-bottom: 1rem;
   border-bottom: 1px solid silver;
+  margin-bottom: 1rem;
 }
 
 .account__single-stock, .account__single-price, .account__single-quantity {
@@ -512,6 +513,23 @@
           flex: 0.5;
 }
 
+.scard__chart {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 15rem;
+}
+
+.scard__chart canvas {
+  width: 90% !important;
+  max-width: 1000px;
+  max-height: 20rem;
+}
+
 @media only screen and (min-width: 993px) {
   .scard {
     padding: 5rem;
@@ -519,6 +537,9 @@
   }
   .scard__priceChange-value {
     font-size: 1.3rem;
+  }
+  .scard__chart {
+    height: 20rem;
   }
 }
 
