--- a/client/src/styles/_partials/_account.scss
+++ b/client/src/styles/_partials/_account.scss
@@ -36,7 +36,8 @@
   }
   &__date,
   &__cost,
-  &__gainLose {
+  &__gainLose,
+  &__status {
     display: none;
   }
   &__single {
@@ -60,7 +61,7 @@
     &-date,
     &-cost,
     &-gainLose,
-    &__buttonPlace {
+    &-status {
       margin: 0;
       display: none;
     }
@@ -104,7 +105,8 @@
     }
     &__date,
     &__cost,
-    &__gainLose {
+    &__gainLose,
+    &__status {
       flex: 0.2;
       font-size: 1rem;
       display: initial;
@@ -125,7 +127,8 @@
       padding-bottom: 0.5rem;
       &-date,
       &-cost,
-      &-gainLose {
+      &-gainLose,
+      &-status {
         font-size: 1rem;
         display: initial;
         flex: 0.2;
