--- a/client/src/styles/_partials/_landing.scss
+++ b/client/src/styles/_partials/_landing.scss
@@ -1,26 +1,22 @@
 .landing {
-  height: 85vh;
+  height: 86vh;
   width: 100vw;
-  padding: 1rem;
+  padding: 2rem 1rem;
   background-image: url("/stockbg2.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  &__header {
-    padding: 1.5rem;
-    border-radius: 0.5rem;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
+  &__content {
+    border-radius: 1rem;
     background-color: rgba(0, 0, 0, 0.5);
+  }
+  &__header {
+    padding: 1rem;
     font-size: 2rem;
     color: white;
   }
   &__text {
-    padding: 0 1.5rem 1.5rem 1.5rem;
-    border-radius: 0.5rem;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    padding: 1rem;
     color: white;
     font-size: 1rem;
     a {
@@ -43,18 +39,22 @@
 }
 @include tablet {
   .landing {
-    padding: 2rem 8rem;
+    padding: 5rem 8rem;
     &__header {
       font-size: 4rem;
     }
     &__text {
       font-size: 2rem;
     }
+    &__content {
+      padding: 3rem;
+      margin-bottom: 4rem;
+    }
   }
 }
 @include desk {
   .landing {
-    padding: 4rem 12rem;
+    padding: 8rem 12rem;
 
     &__content {
       margin-right: 40%;
