--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -60,31 +60,28 @@
 }
 
 .landing {
-  height: 85vh;
+  height: 86vh;
   width: 100vw;
-  padding: 1rem;
+  padding: 2rem 1rem;
   background-image: url("/stockbg2.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
-.landing__header {
-  padding: 1.5rem;
-  border-radius: 0.5rem;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
+.landing__content {
+  border-radius: 1rem;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.landing__header {
+  padding: 1rem;
   font-size: 2rem;
   color: white;
 }
 
 .landing__text {
-  padding: 0 1.5rem 1.5rem 1.5rem;
-  border-radius: 0.5rem;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  padding: 1rem;
   color: white;
   font-size: 1rem;
 }
@@ -115,7 +112,7 @@
 
 @media only screen and (min-width: 993px) {
   .landing {
-    padding: 2rem 8rem;
+    padding: 5rem 8rem;
   }
   .landing__header {
     font-size: 4rem;
@@ -123,11 +120,15 @@
   .landing__text {
     font-size: 2rem;
   }
+  .landing__content {
+    padding: 3rem;
+    margin-bottom: 4rem;
+  }
 }
 
 @media only screen and (min-width: 1440px) {
   .landing {
-    padding: 4rem 12rem;
+    padding: 8rem 12rem;
   }
   .landing__content {
     margin-right: 40%;
@@ -186,7 +187,7 @@
           flex: 0.25;
 }
 
-.account__date, .account__cost, .account__gainLose {
+.account__date, .account__cost, .account__gainLose, .account__status {
   display: none;
 }
 
@@ -220,7 +221,7 @@
           flex: 0.25;
 }
 
-.account__single-date, .account__single-cost, .account__single-gainLose, .account__single__buttonPlace {
+.account__single-date, .account__single-cost, .account__single-gainLose, .account__single-status {
   margin: 0;
   display: none;
 }
@@ -276,7 +277,7 @@
   .account__balance {
     font-size: 2rem;
   }
-  .account__date, .account__cost, .account__gainLose {
+  .account__date, .account__cost, .account__gainLose, .account__status {
     -webkit-box-flex: 0.2;
         -ms-flex: 0.2;
             flex: 0.2;
@@ -297,7 +298,7 @@
   .account__single {
     padding-bottom: 0.5rem;
   }
-  .account__single-date, .account__single-cost, .account__single-gainLose {
+  .account__single-date, .account__single-cost, .account__single-gainLose, .account__single-status {
     font-size: 1rem;
     display: initial;
     -webkit-box-flex: 0.2;
@@ -638,6 +639,10 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.trade__estimate input {
+  padding: 1rem;
 }
 
 .login {
