--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -60,8 +60,17 @@
 }
 
 .landing {
-  height: 86vh;
-  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  width: 100%;
   padding: 2rem 1rem;
   background-image: url("/stockbg2.jpg");
   background-repeat: no-repeat;
@@ -71,7 +80,7 @@
 
 .landing__content {
   border-radius: 1rem;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .landing__header {
@@ -106,7 +115,9 @@
 }
 
 .landing #signupbtn,
-.landing #loginbtn {
+.landing #loginbtn,
+.landing #accountBtn,
+.landing #orderBtn {
   width: 40vw;
 }
 
@@ -115,23 +126,68 @@
     padding: 5rem 8rem;
   }
   .landing__header {
-    font-size: 4rem;
+    font-size: 3rem;
   }
   .landing__text {
-    font-size: 2rem;
+    font-size: 1rem;
   }
   .landing__content {
-    padding: 3rem;
-    margin-bottom: 4rem;
+    padding: 2rem;
+  }
+  .landing__btnWrap * {
+    font-size: 1.5rem;
+  }
+  .landing #signupbtn,
+  .landing #loginbtn,
+  .landing #accountBtn,
+  .landing #orderBtn {
+    width: 40vw;
+    height: 4rem;
+    margin: 0.5rem;
   }
 }
 
 @media only screen and (min-width: 1440px) {
   .landing {
-    padding: 8rem 12rem;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    padding: 5rem 12rem;
   }
   .landing__content {
-    margin-right: 40%;
+    padding-bottom: 0;
+    -webkit-box-flex: 0.6;
+        -ms-flex: 0.6;
+            flex: 0.6;
+  }
+  .landing__btnWrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    padding-bottom: 10rem;
+    -webkit-box-flex: 0.4;
+        -ms-flex: 0.4;
+            flex: 0.4;
+  }
+  .landing__btnWrap * {
+    font-size: 2rem;
+  }
+  .landing #signupbtn,
+  .landing #loginbtn,
+  .landing #accountBtn,
+  .landing #orderBtn {
+    width: 30vw;
+    margin-bottom: 2rem;
+    margin-left: 3rem;
+    height: 5rem;
   }
 }
 
@@ -284,9 +340,6 @@
     font-size: 1rem;
     display: initial;
   }
-  .account__buttonPlace {
-    width: 4rem;
-  }
   .account__stock, .account__price, .account__quantity {
     -webkit-box-flex: 0.2;
         -ms-flex: 0.2;
@@ -294,6 +347,12 @@
   }
   .account__net {
     text-align: left;
+  }
+  .account__sellbtn {
+    width: 3rem;
+  }
+  .account__buttonPlace {
+    width: 4rem;
   }
   .account__single {
     padding-bottom: 0.5rem;
@@ -324,6 +383,12 @@
   .account {
     margin: 2rem 11rem;
   }
+  .account__single-date, .account__single-cost, .account__single-gainLose, .account__single-status, .account__single-stock, .account__single-price, .account__single-quantity, .account__single-net {
+    font-size: 1.5rem;
+  }
+  .account__date, .account__cost, .account__gainLose, .account__status, .account__stock, .account__price, .account__quantity, .account__net {
+    font-size: 1.5rem;
+  }
 }
 
 .research__form-wrap {
@@ -342,7 +407,7 @@
 #nav-searchInput {
   width: 50vw;
   height: 3rem;
-  margin-right: 1rem;
+  margin-right: 2rem;
 }
 
 #nav-searchButton {
@@ -351,6 +416,22 @@
           flex: 0.3;
   height: 3rem;
   font-size: 1.3rem;
+}
+
+@media only screen and (min-width: 1440px) {
+  #nav-searchInput {
+    font-size: 2rem;
+    width: 50vw;
+    height: 5rem;
+  }
+  #nav-searchButton {
+    -webkit-box-flex: 0.3;
+        -ms-flex: 0.3;
+            flex: 0.3;
+    height: 5rem;
+    padding: 0 3rem;
+    font-size: 1.3rem;
+  }
 }
 
 .scard {
@@ -545,11 +626,39 @@
   .scard__chart {
     height: 20rem;
   }
+  .scard__highlow-title {
+    font-size: 1.5rem;
+  }
+  .scard__52Wk {
+    font-size: 1.5rem;
+  }
+  .scard__52Wk-barwrap {
+    height: 1rem;
+  }
+  .scard__marketOpen {
+    font-size: 2rem;
+  }
+  .scard__pricewrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    font-size: 2rem;
+  }
+  .scard__priceChange-value {
+    margin-left: 1rem;
+    font-size: 2rem;
+  }
+  .scard__priceCurrent span {
+    margin-left: 2rem;
+  }
 }
 
 @media only screen and (min-width: 1440px) {
   .scard {
-    margin: 2rem 12rem;
+    margin: 2rem 18rem;
   }
 }
 
@@ -619,6 +728,7 @@
 }
 
 .trade__inputs-price, .trade__inputs-quantity {
+  font-size: 2rem;
   margin: 1rem 0;
   padding: 1rem;
   border: 1px solid silver;
@@ -639,9 +749,16 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 80%;
 }
 
 .trade__estimate input {
+  text-align: center;
+  width: 100%;
+  font-size: 2rem;
   padding: 1rem;
 }
 
@@ -664,25 +781,18 @@
           flex-direction: column;
 }
 
-.login__username {
+.login__username, .login__password {
   width: 83%;
   padding: 1rem;
   height: 3rem;
+  margin: 1rem;
   border: 1px solid silver;
-  border-radius: 0.3rem;
-  margin-bottom: 1rem;
-}
-
-.login__password {
-  width: 83%;
-  padding: 1rem;
-  height: 3rem;
-  border-radius: 0.3rem;
-  border: 1px solid silver;
+  border-radius: 0.5rem;
   margin-bottom: 1rem;
 }
 
 .login__btnWrap {
+  margin-top: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -693,11 +803,19 @@
 
 @media only screen and (min-width: 993px) {
   .login {
+    width: 40rem;
     padding: 2rem;
+  }
+  .login__inputWrap {
+    width: 100%;
+  }
+  .login__username, .login__password {
+    height: 4rem;
   }
 }
 
 .styles_modal__gNwvD {
   border-radius: 1rem;
+  padding: 2rem;
 }
 /*# sourceMappingURL=index.css.map */
