styles heading active navlink

--- a/client/src/styles/_partials/_account.scss
+++ b/client/src/styles/_partials/_account.scss
@@ -1,6 +1,7 @@
 .account {
   margin: 2rem 1rem;
   padding: 2rem 1rem;
+  padding-bottom: 3rem;
   border-radius: 1rem;
   border: 1px solid silver;
   box-shadow: 0.1rem 0.1rem 0.1rem #cccbcb;
