--- a/client/src/styles/_partials/_footer.scss
+++ b/client/src/styles/_partials/_footer.scss
@@ -1,10 +1,17 @@
+#root {
+  position: relative;
+  min-height: 100vh;
+}
 .footer {
-  height: 5rem;
+  height: 3rem;
   background-color: #343a40;
   color: white;
   padding: 1rem;
   display: flex;
   align-items: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 @include tablet {
   .footer {
