--- a/client/src/styles/_partials/_stockCard.scss
+++ b/client/src/styles/_partials/_stockCard.scss
@@ -46,9 +46,11 @@
   &__pricewrap {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     font-size: 1.3rem;
   }
   &__priceChange {
+    margin-right: 1rem;
     &-value {
       font-size: 1rem;
     }
@@ -60,6 +62,9 @@
   }
   &__highlow-title,
   &__highlow-value {
+    * {
+      margin: 0;
+    }
     display: flex;
     justify-content: space-between;
   }
@@ -128,11 +133,12 @@
     &__chart {
       height: 20rem;
     }
-    &__highlow-title {
+    &__highlow-title,
+    &__highlow-value {
       font-size: 1.5rem;
     }
     &__52Wk {
-      font-size: 1.5rem;
+      font-size: 1rem;
       &-barwrap {
         height: 1rem;
       }
