--- a/client/src/styles/_partials/_landing.scss
+++ b/client/src/styles/_partials/_landing.scss
@@ -2,9 +2,11 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  width: 100%;
-  height: 83vh;
-  padding: 2rem 1rem;
+  position: fixed;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+  padding: 4rem 1rem;
   background-image: url("/stockbg2.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -74,10 +76,10 @@
   .landing {
     flex-direction: row;
     padding: 5rem 12rem;
-
     &__content {
       padding-bottom: 0;
       flex: 0.6;
+      height: 70vh;
     }
     &__btnWrap {
       display: flex;
