--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -87,9 +87,11 @@
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  width: 100%;
-  height: 83vh;
-  padding: 2rem 1rem;
+  position: fixed;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+  padding: 4rem 1rem;
   background-image: url("/stockbg2.jpg");
   background-repeat: no-repeat;
   background-position: center;
@@ -179,6 +181,7 @@
     -webkit-box-flex: 0.6;
         -ms-flex: 0.6;
             flex: 0.6;
+    height: 70vh;
   }
   .landing__btnWrap {
     display: -webkit-box;
