--- a/client/src/styles/_partials/_research.scss
+++ b/client/src/styles/_partials/_research.scss
@@ -3,7 +3,14 @@
     display: flex;
     flex: 1;
     justify-content: center;
+    align-items: flex-start;
     margin: 1rem 0;
+  }
+  &__stock-news {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
   }
 }
 #nav-searchInput {
