--- a/client/src/styles/_partials/_landing.scss
+++ b/client/src/styles/_partials/_landing.scss
@@ -1,11 +1,9 @@
 .landing {
   display: flex;
   flex-direction: column;
-  flex: 1;
-  position: fixed;
-  left: 0;
+  position: relative;
   min-width: 100%;
-  min-height: 100%;
+  min-height: 80vh;
   padding: 4rem 1rem;
   background-image: url("/stockbg2.jpg");
   background-repeat: no-repeat;
@@ -18,7 +16,7 @@
   }
   &__header {
     padding: 1rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: white;
   }
   &__text {
@@ -49,12 +47,13 @@
   .landing {
     padding: 5rem 8rem;
     &__header {
-      font-size: 3rem;
+      font-size: 1.5rem;
     }
     &__text {
       font-size: 1rem;
     }
     &__content {
+      max-height: 20vw;
       padding: 2rem;
     }
     &__btnWrap {
@@ -66,8 +65,7 @@
     #loginbtn,
     #accountBtn,
     #orderBtn {
-      width: 40vw;
-      height: 4rem;
+      width: 20vw;
       margin: 0.5rem;
     }
   }
@@ -75,30 +73,23 @@
 @include desk {
   .landing {
     flex-direction: row;
-    padding: 5rem 12rem;
+    padding: 5rem 20rem;
     &__content {
       padding-bottom: 0;
-      flex: 0.6;
-      height: 70vh;
+      flex: 0.8;
     }
     &__btnWrap {
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      padding-bottom: 10rem;
-      flex: 0.4;
-      * {
-        font-size: 2rem;
-      }
+      flex: 0.2;
     }
     #signupbtn,
     #loginbtn,
     #accountBtn,
     #orderBtn {
-      width: 30vw;
       margin-bottom: 2rem;
       margin-left: 3rem;
-      height: 5rem;
     }
   }
 }
